--- a/UpdateMe/app/src/main/res/layout/activity_main.xml
+++ b/UpdateMe/app/src/main/res/layout/activity_main.xml
@@ -3,40 +3,74 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    tools:ignore="NestWeights">
 
     <android.support.v7.widget.CardView
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:gravity="bottom"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
 
+                    android:text="@string/stock_symbol"
+                    />
+                <EditText
+                    android:id="@+id/stockSymbolEditText"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"/>
+                <Button
+                    android:id="@+id/enterStockSymbolButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/enter_stock_symbol"/>
+            </LinearLayout>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/line1"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="@string/stock_symbol_list"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="6">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/line2"
-                android:layout_below="@+id/line1"
-                android:layout_alignParentStart="true" />
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:id="@+id/stockScrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/line3"
-                android:layout_below="@+id/line2"
-                android:layout_alignParentStart="true" />
-        </RelativeLayout>
+                    </LinearLayout>
+                </ScrollView>
+            </LinearLayout>
+            <Button
+                android:id="@+id/deleteStockSymbolButton"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="@string/delete_all_symbol"/>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
