--- a/UpdateMe/app/src/main/res/layout/cardview.xml
+++ b/UpdateMe/app/src/main/res/layout/cardview.xml
@@ -4,20 +4,27 @@
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CFD8DC"
+    android:background="#009688"
     android:orientation="vertical"
     android:padding="10dp">
+
+    <TextView
+        android:id="@+id/map_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/change_destination"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Destination"
+        android:background="#009688"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardBackgroundColor="#7C4DFF">
-
-        <TextView
-            android:id="@+id/map_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        card_view:cardBackgroundColor="#FFEB3B">
 
         <fragment
             android:id="@+id/map"
