--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -8,23 +8,31 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardBackgroundColor="#FFEB3B">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/map_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_weight="5"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"/>
 
         <Button
             android:id="@+id/change_destination"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Change Destination"
-            android:background="#009688"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:text="I"
+            android:background="#009688"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        card_view:cardBackgroundColor="#FFEB3B">
 
         <fragment
             android:id="@+id/map"
@@ -38,8 +46,8 @@
             map:uiRotateGestures="true"
             map:uiScrollGestures="true"
             map:uiTiltGestures="true"
-            map:uiZoomControls="true"
-            map:uiZoomGestures="true" />
+            map:uiZoomGestures="true"
+            map:uiZoomControls="true"/>
 
     </android.support.v7.widget.CardView>
 
