--- a/UpdateMe/app/src/main/res/layout/cardview.xml
+++ b/UpdateMe/app/src/main/res/layout/cardview.xml
@@ -8,22 +8,32 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
-        android:id="@+id/map_info"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/change_destination"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Change Destination"
-        android:background="#009688"/>
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/map_info"
+            android:textColor="#ffffff"
+            android:layout_weight="5"
+            android:textSize="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <Button
+            android:id="@+id/change_destination"
+            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:text="O"
+            android:background="#009688"/>
+        </LinearLayout>
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         card_view:cardBackgroundColor="#FFEB3B">
 
         <fragment
