--- a/UpdateMe/app/src/main/res/layout/directions_input.xml
+++ b/UpdateMe/app/src/main/res/layout/directions_input.xml
@@ -2,19 +2,29 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:alignmentMode="alignBounds"
+    android:background="#009688"
     android:orientation="horizontal"
-    android:padding="16dp"
+    android:padding="10dp"
     android:useDefaultMargins="true"
     android:columnCount="1" >
 
+    <TextView
+        android:id="@+id/settings_label"
+        android:layout_gravity="fill_horizontal"
+        android:text="Settings"
+        android:textSize="25dp"
+        android:gravity="center_horizontal"
+        android:textColor="#fff" />
 
     <TextView
         android:id="@+id/from_label"
         android:layout_gravity="fill_horizontal"
+        android:layout_marginTop="15dp"
         android:text="Home"
-        android:textColor="?android:textColorSecondary" />
+        android:textSize="16dp"
+        android:textColor="#fff" />
 
 
     <AutoCompleteTextView
@@ -22,14 +32,17 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
+        android:textColor="#fff"
         android:completionThreshold="3" />
 
 
     <TextView
         android:id="@+id/to_label"
+        android:layout_marginTop="15dp"
         android:layout_gravity="fill_horizontal"
         android:text="Work"
-        android:textColor="?android:textColorSecondary" />
+        android:textSize="16dp"
+        android:textColor="#fff" />
 
 
     <AutoCompleteTextView
@@ -37,19 +50,32 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
+        android:textColor="#fff"
         android:completionThreshold="3" />
+
+    <TextView
+        android:id="@+id/mode_label"
+        android:layout_gravity="fill_horizontal"
+        android:text="Mode of Transportation"
+        android:layout_marginTop="15dp"
+        android:textSize="16dp"
+        android:textColor="#fff" />
 
     <Spinner
         android:id="@+id/mode_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Spinner"
         android:entries="@array/mode_arrays"/>
 
     <Button
         android:id="@+id/load_directions"
+        android:layout_marginTop="15dp"
         android:layout_columnSpan="1"
         android:layout_gravity="fill_horizontal"
-        android:text="save" />
-
+        android:textColor="#fff"
+        android:textSize="20dp"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:text="Save" />
 
 </GridLayout>
