--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -10,23 +10,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <TextView
             android:id="@+id/map_info"
+            android:textColor="#ffffff"
             android:layout_weight="5"
-            android:layout_width="0dp"
+            android:textSize="16dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
         <Button
             android:id="@+id/change_destination"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="I"
-            android:background="#009688"
-            android:layout_weight="1"/>
+            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:text="O"
+            android:background="#009688"/>
     </LinearLayout>
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -46,8 +48,8 @@
             map:uiRotateGestures="true"
             map:uiScrollGestures="true"
             map:uiTiltGestures="true"
-            map:uiZoomGestures="true"
-            map:uiZoomControls="true"/>
+            map:uiZoomControls="true"
+            map:uiZoomGestures="true" />
 
     </android.support.v7.widget.CardView>
 
