--- a/UpdateMe/app/src/main/res/layout/fragment_back.xml
+++ b/UpdateMe/app/src/main/res/layout/fragment_back.xml
@@ -3,26 +3,45 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107"
-    android:weightSum="1">
+    android:background="#FFC107">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:orientation="vertical">
 
     <EditText
         android:id="@+id/position"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="Type in the position"
+        android:textAlignment="center"
+        android:layout_marginTop="40dp"
         android:background="@drawable/edit_text_style"/>
 
     <EditText
         android:id="@+id/location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Type in the location"/>
+        android:layout_height="50dp"
+        android:hint="Type in the location"
+        android:background="@drawable/edit_text_style"
+        android:layout_marginTop="20dp" />
+        </LinearLayout>
+    </LinearLayout>
+
+
 
     <ImageView
         android:id="@+id/search_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/job_search" />
+        android:layout_width="700dp"
+        android:layout_height="300dp"
+        android:background="@drawable/very"/>
 
 </LinearLayout>
