--- a/UpdateMe/app/src/main/res/layout/job_activity.xml
+++ b/UpdateMe/app/src/main/res/layout/job_activity.xml
@@ -45,9 +45,9 @@
 
                 <ImageView
                     android:id="@+id/settings"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@drawable/ic_action_settings_applications"/>
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="@drawable/settings_icon"/>
             </LinearLayout>
 
             <FrameLayout
