--- a/UpdateMe/app/src/main/res/layout/job_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/job_layout.xml
@@ -22,11 +22,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/header"
+            style="@style/TextAppearance.AppCompat.Title"
             android:textSize="25sp"
             android:textStyle="bold"
             android:gravity="center"
@@ -35,9 +35,9 @@
          <ImageView
              android:id="@+id/info_icon"
              android:layout_width="0dp"
-             android:layout_height="wrap_content"
-             android:background="@drawable/ic_action_info"
-             android:layout_weight="0.4"/>
+             android:layout_height="30dp"
+             android:background="@drawable/info_icon_trans"
+             android:layout_weight="0.3"/>
 
 
         </LinearLayout>
@@ -50,25 +50,42 @@
             android:layout_gravity="center"
             card_view:cardCornerRadius="4dp">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="#FFC107"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ok"
+                    android:layout_weight="0.5"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
-                android:background="#FFC107">
+                android:layout_weight="3">
 
 
                 <TextView
                     android:id="@+id/title1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/company1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:textSize="12sp"/>
+
+            </LinearLayout>
 
             </LinearLayout>
 
@@ -84,22 +101,41 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:orientation="vertical"
-                android:background="#FFC107">
+                android:background="#FFC107"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/title2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
+                <ImageView
+                    android:id="@+id/ok"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ok"
+                    android:layout_weight="0.5"/>
 
-                <TextView
-                    android:id="@+id/company2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:layout_weight="3">
+
+
+                    <TextView
+                        android:id="@+id/title2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/company2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
@@ -114,23 +150,44 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:orientation="vertical"
-                android:background="#FFC107">
+                android:background="#FFC107"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/title3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textSize="18sp"
-                    android:textStyle="bold"/>
+                <ImageView
+                    android:id="@+id/ok"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ok"
+                    android:layout_weight="0.5"/>
 
-                <TextView
-                    android:id="@+id/company3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical"
+                    android:layout_weight="3">
+
+
+                    <TextView
+                        android:id="@+id/title3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/company3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="12sp"/>
+
+                </LinearLayout>
+
+
             </LinearLayout>
+
         </android.support.v7.widget.CardView>
 
 
