--- a/UpdateMe/app/src/main/res/layout/todo_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/todo_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#009688"
     android:orientation="vertical"
     android:padding="10dp">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,50 +20,32 @@
             android:layout_gravity="center"
             android:layout_weight="5"
             android:gravity="center"
-            android:text="Navigation"
-            android:textSize="30sp"
+            android:text="To Do List"
             android:textColor="#fff"
-            android:textStyle="bold"/>
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-        <ImageButton
-            android:id="@+id/change_destination"
+        <Button
+            android:id="@+id/add"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:src="@drawable/ic_action_settings_applications" />
+            android:background="@drawable/ic_action_settings_applications" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/map_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#ffffff"
-        android:textSize="16dp" />
-
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        card_view:cardBackgroundColor="#FFEB3B"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         card_view:cardCornerRadius="4dp">
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.MapFragment"
+        <ListView
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            map:cameraTargetLat="40.7127"
-            map:cameraTargetLng="-74.0059"
-            map:mapType="normal"
-            map:uiCompass="true"
-            map:uiRotateGestures="true"
-            map:uiScrollGestures="true"
-            map:uiTiltGestures="true"
-            map:uiZoomControls="true"
-            map:uiZoomGestures="true" />
+            android:layout_margin="10dp" />
 
     </android.support.v7.widget.CardView>
-
 
 </LinearLayout>
