--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -8,6 +8,11 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"></TableRow>
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
