--- a/UpdateMe/app/src/main/res/layout/todo_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/todo_layout.xml
@@ -25,12 +25,15 @@
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <Button
+        <ImageButton
             android:id="@+id/add"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/ic_action_settings_applications" />
+            android:clickable="true"
+            android:src="@drawable/ic_add"
+            android:background="@android:color/transparent"
+            android:onClick="addTODOListener"/>
     </LinearLayout>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
