--- a/UpdateMe/app/src/main/res/layout/map_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_layout.xml
@@ -4,7 +4,7 @@
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
+    android:background="#4CAF50"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -47,7 +47,7 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        card_view:cardBackgroundColor="#FFEB3B"
+        card_view:cardBackgroundColor="#C8E6C9"
         card_view:cardCornerRadius="4dp">
 
         <fragment
