--- a/UpdateMe/app/src/main/res/layout/todo_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/todo_layout.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
+    android:background="#4CAF50"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -41,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        card_view:cardBackgroundColor="#C8E6C9"
         card_view:cardCornerRadius="4dp">
 
         <ListView
