fix network bug

--- a/UpdateMe/app/src/main/res/layout/job_recycler_view.xml
+++ b/UpdateMe/app/src/main/res/layout/job_recycler_view.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
-            android:background="#FFEB3B">
+            android:background="#C8E6C9">
 
             <TextView
                 android:id="@+id/title"
