--- a/UpdateMe/app/src/main/res/drawable/edit_text_style.xml
+++ b/UpdateMe/app/src/main/res/drawable/edit_text_style.xml
@@ -4,10 +4,10 @@
 
     <item android:state_pressed="true" android:state_focused="true">
         <shape>
-            <solid android:color="#FF8000"/>
+            <solid android:color="#4CAF50"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#FF8000" />
+                android:color="#4CAF50" />
             <corners
                 android:radius="15dp" />
         </shape>
@@ -15,10 +15,10 @@
 
     <item android:state_pressed="true" android:state_focused="false">
         <shape>
-            <solid android:color="#FF8000"/>
+            <solid android:color="#4CAF50"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#FF8000" />
+                android:color="#4CAF50" />
             <corners
                 android:radius="15dp" />
         </shape>
@@ -26,10 +26,10 @@
 
     <item android:state_pressed="false" android:state_focused="true">
         <shape>
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="#C8E6C9"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#FF8000" />
+                android:color="#4CAF50" />
             <corners
                 android:radius="15dp" />
         </shape>
@@ -39,8 +39,8 @@
         <shape>
             <gradient
                 android:startColor="#F2F2F2"
-                android:centerColor="#FFFFFF"
-                android:endColor="#FFFFFF"
+                android:centerColor="#C8E6C9"
+                android:endColor="#C8E6C9"
                 android:angle="270"
                 />
             <stroke
