--- a/UpdateMe/app/src/main/res/layout/fragment_back.xml
+++ b/UpdateMe/app/src/main/res/layout/fragment_back.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107">
+    android:background="#4CAF50">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
         android:id="@+id/position"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Type in the position"
+        android:hint="@string/keyword"
         android:textAlignment="center"
         android:layout_marginTop="40dp"
         android:background="@drawable/edit_text_style"/>
@@ -30,18 +30,17 @@
         android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="Type in the location"
+        android:hint="@string/location"
         android:background="@drawable/edit_text_style"
         android:layout_marginTop="20dp" />
         </LinearLayout>
     </LinearLayout>
 
 
-
     <ImageView
         android:id="@+id/search_image"
-        android:layout_width="700dp"
-        android:layout_height="300dp"
+        android:layout_width="600dp"
+        android:layout_height="270dp"
         android:background="@drawable/very"/>
 
 </LinearLayout>
