--- a/UpdateMe/app/src/main/res/layout/fragment_top.xml
+++ b/UpdateMe/app/src/main/res/layout/fragment_top.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107">
+    android:background="#4CAF50">
 
     <android.support.v7.widget.RecyclerView
         android:layout_centerInParent="true"
