--- a/UpdateMe/app/src/main/res/layout/job_activity.xml
+++ b/UpdateMe/app/src/main/res/layout/job_activity.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="#FFA000">
+                android:background="#388E3C">
 
                 <TextView
                     android:id="@+id/header"
@@ -38,6 +38,7 @@
                     android:layout_weight="4"
                     android:text="Full Jobs List"
                     android:textStyle="bold"
+                    android:textColor="#fff"
                     style="@style/TextAppearance.AppCompat.Title"
                     android:textSize="30sp"
                     android:layout_gravity="center"
@@ -47,7 +48,7 @@
                     android:id="@+id/settings"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:background="@drawable/ic_action_settings_applications"/>
+                    android:background="@drawable/ic_settings"/>
             </LinearLayout>
 
             <FrameLayout
