--- a/UpdateMe/app/src/main/res/layout/job_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/job_layout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#FFA000">
+        android:background="#4CAF50">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,8 +26,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/header"
+            android:textColor="#fff"
             style="@style/TextAppearance.AppCompat.Title"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:gravity="center"
             android:layout_weight="3"/>
@@ -35,9 +36,9 @@
          <ImageView
              android:id="@+id/info_icon"
              android:layout_width="0dp"
-             android:layout_height="30dp"
-             android:background="@drawable/info_icon_trans"
-             android:layout_weight="0.3"/>
+             android:layout_height="50dp"
+             android:background="@drawable/info"
+             android:layout_weight="0.5"/>
 
 
         </LinearLayout>
@@ -55,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="#FFC107"
+                android:background="#C8E6C9"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -103,11 +104,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="#FFC107"
+                android:background="#C8E6C9"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/ok"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ok"
@@ -152,7 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="#FFC107"
+                android:background="#C8E6C9"
                 android:orientation="horizontal">
 
                 <ImageView
