--- a/UpdateMe/app/src/main/res/values/styles.xml
+++ b/UpdateMe/app/src/main/res/values/styles.xml
@@ -10,4 +10,11 @@
         <item name="android:dropDownSelector">?android:selectableItemBackground</item>
     </style>
 
+    <style name="title">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
