added uniform buttons

--- a/UpdateMe/app/src/main/res/layout/fragment_back.xml
+++ b/UpdateMe/app/src/main/res/layout/fragment_back.xml
@@ -21,6 +21,7 @@
         android:id="@+id/position"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_margin="8dp"
         android:hint="@string/keyword"
         android:textAlignment="center"
         android:layout_marginTop="40dp"
@@ -30,6 +31,7 @@
         android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_margin="8dp"
         android:hint="@string/location"
         android:background="@drawable/edit_text_style"
         android:layout_marginTop="20dp" />
