--- a/UpdateMe/app/src/main/res/layout/job_activity.xml
+++ b/UpdateMe/app/src/main/res/layout/job_activity.xml
@@ -2,10 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#b6b6b6"
+    android:padding="6dp"
     tools:context=".MainActivity">
 
 
@@ -15,10 +13,9 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        card_view:cardBackgroundColor="#C8E6C9"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="4dp">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,28 +24,27 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
+                android:layout_margin="8dp"
+                android:padding="8dp"
                 android:background="#388E3C">
 
                 <TextView
                     android:id="@+id/header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
                     android:text="Full Jobs List"
-                    android:textStyle="bold"
-                    android:textColor="#fff"
-                    style="@style/TextAppearance.AppCompat.Title"
-                    android:textSize="30sp"
-                    android:layout_gravity="center"
-                    android:gravity="center"/>
+                    style="@style/title"/>
 
                 <ImageView
                     android:id="@+id/settings"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@drawable/ic_settings"/>
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_settings"/>
             </LinearLayout>
 
             <FrameLayout
@@ -56,8 +52,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
-
-
 
     </android.support.v7.widget.CardView>
 
