--- a/UpdateMe/app/src/main/res/layout/job_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/job_layout.xml
@@ -38,11 +38,11 @@
                 <ImageView
                     android:id="@+id/info_icon"
                     android:layout_width="0dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/info" />
+                    android:src="@drawable/ic_info" />
 
             </LinearLayout>
 
@@ -67,7 +67,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:background="@drawable/ok" />
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_check" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -115,7 +116,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:background="@drawable/ok" />
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_check"  />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -166,7 +168,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
-                        android:background="@drawable/ok" />
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_check"  />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -174,7 +177,6 @@
                         android:layout_gravity="center"
                         android:layout_weight="3"
                         android:orientation="vertical">
-
 
                         <TextView
                             android:id="@+id/title3"
