--- a/UpdateMe/app/src/main/res/drawable/edit_text_style.xml
+++ b/UpdateMe/app/src/main/res/drawable/edit_text_style.xml
@@ -4,10 +4,10 @@
 
     <item android:state_pressed="true" android:state_focused="true">
         <shape>
-            <solid android:color="#4CAF50"/>
+            <solid android:color="#388E3C"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#4CAF50" />
+                android:color="#388E3C" />
             <corners
                 android:radius="15dp" />
         </shape>
@@ -15,10 +15,10 @@
 
     <item android:state_pressed="true" android:state_focused="false">
         <shape>
-            <solid android:color="#4CAF50"/>
+            <solid android:color="#388E3C"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#4CAF50" />
+                android:color="#388E3C" />
             <corners
                 android:radius="15dp" />
         </shape>
@@ -29,7 +29,7 @@
             <solid android:color="#C8E6C9"/>
             <stroke
                 android:width="2.3dp"
-                android:color="#4CAF50" />
+                android:color="#388E3C" />
             <corners
                 android:radius="15dp" />
         </shape>
