--- a/UpdateMe/app/src/main/res/layout/map_settings_layout.xml
+++ b/UpdateMe/app/src/main/res/layout/map_settings_layout.xml
@@ -49,6 +49,7 @@
                     android:layout_gravity="fill_horizontal"
                     android:layout_marginTop="20dp"
                     android:text="Home"
+                    android:textColor="#388E3C"
                     android:textSize="16dp"
                     android:textStyle="bold" />
 
@@ -58,8 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:layout_marginTop="10dp"
-                    android:completionThreshold="3"
-                    android:textColor="#388E3C" />
+                    android:completionThreshold="3" />
 
 
                 <TextView
@@ -78,8 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:layout_marginTop="10dp"
-                    android:completionThreshold="3"
-                    android:textColor="#388E3C" />
+                    android:completionThreshold="3"/>
 
                 <TextView
                     android:id="@+id/mode_label"
